[package]
name = "squadlala-twitch-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
regex = "1"
lazy_static = "1.4.0"
